Bugfix: Increase shadow opacity on header bar so it looks less weird on mobile.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -40,7 +40,7 @@ body {
   left: 0;
   right: 0;
   background-color: var(--bg-s);
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
 h1 {
   margin: 1rem;
